# backtesting.py

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .python-version  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  setup.cfg  setup.py  tox.ini
backtesting/: __init__.py  _plotting.py  _util.py  backtesting.py  backtesting_helpers.py  broker.py  lib.py  metrics.py  ohlc_helpers.py  order.py  plotting_helpers.py  position.py  strategy.py  strategy_helpers.py  trade.py
backtesting/test/: __init__.py  __main__.py  _test.py
doc/examples/: Multiple Time Frames.ipynb  Multiple Time Frames.py  Parameter Heatmap & Optimization.ipynb  Parameter Heatmap & Optimization.py  Quick Start User Guide.ipynb  Quick Start User Guide.py  Strategies Library.ipynb  Strategies Library.py  Trading with Machine Learning.ipynb  Trading with Machine Learning.py
doc/scripts/: ipython_config.py  logo.py  strip_yaml.awk
