[metadata]
name = backtesting
version = 0.3.1

[options]
packages = find:
include_package_data = true
install_requires =
    numpy
    pandas
    bokeh
    tqdm
    scikit-optimize
python_requires = >=3.9
package_dir =
    =.

[options.extras_require]
test =
    tox
    pytest
    pytest-cov
typing =
    mypy
    typing-extensions

[options.packages.find]
where = .

[options.package_data]
* = *.js

[flake8]
ignore = E203, E266, E501, W503, F403, F401
max-complexity = 18
max-line-length = 140
select = B,C,E,F,W,T4,B9

[mypy]
color_output = True
disable_error_code = misc, import, operator
pretty = True
python_version = 3.9
show_error_codes = True
warn_unused_configs = True
